<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">
        <com.example.tomi.databasegoles.Widget.RobotoTextView
            android:id="@+id/tvAño"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/primary_light"
            android:text="2017"
            android:textAlignment="center"
            android:textSize="24sp"
            app:typeface="roboto_bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_rival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_rival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/hint_rival"
                android:inputType="textMultiLine"
                android:maxLines="3"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_competencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_competencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/hint_competencia"
                android:inputType="textMultiLine"
                android:maxLines="3"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_goles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_goles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_goles"
                android:inputType="number"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_agregar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/primary"
            android:text="@string/btn_agregar"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>